<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleStandard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/gradient"
            android:gravity="center"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:text="@string/standard"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="RtlSymmetry" />

        <LinearLayout
            android:id="@+id/layoutHospital"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_hospital"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_hospital"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutApartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_apartment"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_hospital"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutBathRoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_bathroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_bathroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenApartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_apartment"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_apartment"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenSchool"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_school"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_school"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenOffice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_office"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_office"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_reader"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_reader"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenReaderNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_reader_no"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_reader_no"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenRestaurant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_restaurant"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_restaurant"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenRestaurantExihibit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_restaurant_exihibit"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_restaurant_exihibit"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenClassroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_classroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_classroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenBalcony"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_balcony"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_balcony"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutKitchenLivingroom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:lines="2"
                android:text="@string/title_kitchen_livingroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.35"
                android:gravity="center_horizontal"
                android:text="@string/refer_kitchen_livingroom"
                android:textColor="@android:color/black"
                android:textSize="13sp" />

        </LinearLayout>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>